--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Project-2/edit/main/contact.html/about.html">About</a>
+                        <a class="nav-link" href="Project-2/edit/main/index.html/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/Jayanthsomuri/Project-2/edit/main/contact.html">Contact us</a>
+                        <a class="nav-link" href="https://github.com/Jayanthsomuri/Project-2/edit/main/index.html/contact.html">Contact us</a>
                     </li>
 
                 </ul>
