--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                         <a class="nav-link " aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="Project-2/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact us</a>
+                        <a class="nav-link" href="Project-2/contact.html">Contact us</a>
                     </li>
 
                 </ul>
