--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Project-2/edit/main/index.html/about.html">About</a>
+                        <a class="nav-link" href="Project-2/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
